# mongo-datatables

./: .coveragerc  .gitignore  .readthedocs.yaml  .trivyignore  CHANGELOG.md  CNAME  CONTRIBUTING.md  EDITOR_GAPS.md  IMPROVEMENT_LOG.md  LICENSE.txt  MANIFEST.in  README.md  README.rst  api_validation.py  debug_utility.py  ltc.toml  mongo_datatables_loop.sh  pyproject.toml  quality_validation.py  rowgroup_validation.py  run_coverage.py  run_tests.py  setup.py
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  dependabot.yml
.github/workflows/: pages.yml  python-tests.yaml  python-tests.yml  release.yml
.ltc/: state.json
.ltc/hooks/: post-dev-format.sh  post-dev-lang.sh  post-dev-scan.sh
_dev/: TEST_HARDENING_LOG.md
docs/: requirements.txt
docs/source/: changelog.rst  conf.py  datatables.rst  editor.rst  examples.rst  exceptions.rst  index.rst  installation.rst  quickstart.rst
docs/source/_static/: custom.css
docs/source/_templates/: page.html
examples/: buttons_example.py  colreorder_example.py  config_validation_example.py  count_optimization_example.py  fixed_columns_example.py  fixed_header_example.py  responsive_example.py  rowgroup_example.py  searchbuilder_example.py  select_example.py
mongo_datatables/: __init__.py  column_control.py  config_parser.py  config_validator.py  data_field.py  datatables.py  datatables_core.py  dt_filter.py  dt_results.py  editor.py  editor_crud.py  editor_document.py  editor_search.py  editor_storage.py  editor_validator.py  exceptions.py  field_utils.py  formatting.py  query_builder.py  query_conditions.py  query_global_search.py  regex_utils.py  request_validator.py  search_builder.py  search_fixed.py  search_panes.py  utils.py
mongo_datatables/datatables/: __init__.py  _limits.py  _setup.py  compat.py  core.py  filter.py  formatting.py  request_validator.py  response.py  results.py
mongo_datatables/datatables/query/: __init__.py  column_control.py  conditions.py  global_search.py  regex_utils.py
mongo_datatables/datatables/search/: __init__.py  builder.py  fixed.py  panes.py
mongo_datatables/editor/: __init__.py  core.py  crud.py  dispatch.py  document.py  search.py  storage.py  validator.py
mongo_datatables/editor/validators/: __init__.py  identity.py  payload.py  request_args.py  upload_security.py
site/: CNAME  dashboard.html  index.html  style.css  wrangler.jsonc
tests/: __init__.py  base_test.py  test_additional_extension_validation.py  test_alias_remapping.py  test_allow_disk_use.py  test_binary_serialization.py  test_build_pipeline.py  test_buttons.py  test_case_insensitive.py  test_colreorder.py  test_colreorder_column_search.py  test_column_control.py  test_column_control_not_bson.py  test_column_search_field_mapping.py  test_column_search_fixed.py  test_column_smart_search.py  test_config_validation.py  test_config_validation_extended.py  test_config_validator.py  test_count_optimization.py  test_datafield.py  test_datatables.py  test_datatables_debug_mode.py  test_datatables_edge_cases.py  test_datatables_error_handling.py  test_datatables_filtering.py  test_datatables_initialization.py  test_datatables_pagination.py  test_datatables_query_building.py  test_datatables_query_pipeline.py  test_datatables_regex_search.py  test_datatables_results.py  test_datatables_search.py  test_datatables_sort.py  test_datatables_text_search.py  test_datatables_text_search_advanced.py  test_decimal128_serialization.py  test_draw_property.py  test_editor.py  test_editor_advanced.py  (+60 more)
tests/integration/: conftest.py  test_datatables_integration.py
tests/unit/: base_test.py  test_column_search_unit.py  test_column_text.py  test_compat.py  test_cve_2026_25645.py  test_datafield.py  test_datatables_consolidation.py  test_datatables_error_handling.py  test_datatables_filtering.py  test_datatables_misc.py  test_datatables_pipeline.py  test_datatables_results.py  test_datatables_subpackage.py  test_datatables_unit.py  test_editor_actions.py  test_editor_crud.py  test_editor_data_processing.py  test_editor_unit.py  test_error_message_disclosure.py  test_extensions_unit.py  test_field_utils.py  test_filter_import_cleanup.py  test_qb_exceptions_unit.py  test_query_builder_branches.py  test_request_validator.py  test_resource_limits.py  test_sb_date_unit.py  test_search_builder_unit.py  test_search_colon.py  test_search_regex.py  test_search_smart.py  test_search_unit.py  test_searchpanes_unit.py  test_serialization_unit.py  test_sort_unit.py  test_specific_exception_handling.py  test_utils.py
tests/unit/datatables/: __init__.py  conftest.py  test_compat.py  test_cve_2026_25645.py  test_datatables_error_handling.py  test_datatables_initialization.py  test_datatables_misc.py  test_datatables_pagination.py  test_datatables_pipeline.py  test_datatables_results.py  test_datatables_row_features.py  test_datatables_subpackage.py  test_error_message_disclosure.py  test_extensions_unit.py  test_filter_import_cleanup.py  test_formatting.py  test_request_validator.py  test_resource_limits.py  test_serialization_unit.py  test_sort_unit.py  test_specific_exception_handling.py
tests/unit/datatables/query/: __init__.py  test_column_control.py  test_column_range.py  test_regex_utils.py  test_search_global.py  test_search_text.py
tests/unit/datatables/search/: test_sb_date_unit.py  test_search_builder_unit.py  test_search_subpackage.py  test_searchpanes_unit.py
tests/unit/editor/: __init__.py  test_cwe20_date_heuristic.py  test_cwe20_type_confusion.py  test_cwe400_json_parse_dos.py  test_cwe400_search_dos.py  test_cwe915_mass_assignment.py  test_editor_actions.py  test_editor_crud.py  test_editor_document_processing.py  test_editor_protocol.py  test_editor_row_metadata.py  test_editor_subpackage.py  test_editor_updates.py  test_editor_upload.py  test_editor_validation.py  test_editor_write_ops.py  test_upload_security.py
