[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mongo-datatables"
dynamic = ["version"]
description = "Server-side processing for DataTables and Editor with MongoDB"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Paul Olsen", email = "pjosols@wholeshoot.com"}]
keywords = ["datatables", "editor", "mongodb", "pymongo", "flask", "django", "server-side"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: Flask",
    "Framework :: Django",
]
requires-python = ">=3.10"
dependencies = ["pymongo>=4.6,<5", "urllib3>=2.6.3,<3"]

[project.optional-dependencies]
dev = ["pytest>=8.0,<9", "pytest-cov>=5.0,<6", "coverage>=7.0,<8", "tox>=4.0,<5", "sphinx>=7.0,<9", "sphinx-rtd-theme>=2.0,<3"]
test = ["pytest>=8.0,<9", "pytest-cov>=5.0,<6", "coverage>=7.0,<8"]
docs = ["sphinx>=7.0,<9", "sphinx-rtd-theme>=2.0,<3"]

[project.urls]
Homepage = "https://github.com/pjosols/mongo-datatables"
Documentation = "https://mongo-datatables.readthedocs.io/"
"Bug Reports" = "https://github.com/pjosols/mongo-datatables/issues"
Source = "https://github.com/pjosols/mongo-datatables"

[tool.setuptools.dynamic]
version = {attr = "mongo_datatables.__version__"}

[tool.setuptools.packages.find]
exclude = ["tests*", "docs*", "htmlcov*"]

[tool.coverage.run]
source = ["mongo_datatables"]
omit = ["*/tests/*", "*/site-packages/*", "setup.py", "run_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
    "except ImportError:",
]
fail_under = 80

[tool.coverage.html]
directory = "htmlcov"

[tool.uv]
constraint-dependencies = ["filelock>=3.20.3", "pygments>=2.20.0", "virtualenv>=20.36.1", "requests>=2.33.0"]
